Revert "Tweak memory for JDK 8"
This reverts commit c4a4b84e3f341285bc96f94347397dee7c9c534e.